[package]
name = "jenkins-tray"
version = "0.1.0"
authors = ["Armin Häberling <armin.aha@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/arminha/jenkins-tray-rs"
edition = "2018"

[profile.release]
lto = true

[dependencies]
find_folder = "0.3.0"
glib = "0.10.3"
gtk = { version = "0.9.2", features = ["v3_16"] }
gtk-sys = "0.10.0"
libappindicator = "0.5.2"
open = "1.6.0"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde = { version = "1.0.125", features = ["derive"] }
toml = "0.5.8"

[dev-dependencies]
serde_json = "1.0.64"
