[package]
name = "jenkins-tray"
version = "0.1.0"
authors = ["Armin Häberling <armin.aha@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/arminha/jenkins-tray-rs"
edition = "2018"

[profile.release]
lto = true

[dependencies]
find_folder = "0.3.0"
glib = "0.14.8"
gtk = "0.14.3"
gtk-sys = "0.14.0"
libappindicator = "0.6.1"
open = "2.0.2"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"

[dev-dependencies]
serde_json = "1.0.78"
